<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RevolutionOS</string>
    <string name="web">Web Page</string>
    <string name="telegram">Telegram</string>
    <string name="rom"><![CDATA[Roms & Extras]]></string>
    <string name="faq">MIUI FAQ</string>
    <string name="error">Report Faults</string>
    <string name="donate">Voluntary donation</string>
    <string name="about">About us</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="miui_support">MIUI Support</string>
    <string name="miui_news">MIUI News</string>
    <string name="miui_downloads">MIUI Downloads</string>
    <string name="aosp_support">AOSP Support</string>
    <string name="english_group">English Group</string>
    <string name="sharetext">Let me recommend you this application</string>
    <string name="dl_downloading">Downloading File…</string>
    <string name="dl_downloading2">Downloading File</string>
    <string name="aboutlabel">About us</string>
</resources>