<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/bttelegram1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/bttelegram5"
        android:layout_alignEnd="@+id/bttelegram5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/miui_support"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="15sp" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/bttelegram2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/miui_news"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/bttelegram3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/miui_downloads"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"/>

    <Button
        android:onClick="sendError"
        android:textAllCaps="false"
        android:id="@+id/bttelegram4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/aosp_support"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/bttelegram5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/english_group"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"/>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="Back" />

</RelativeLayout>
    <TableRow
        android:gravity="center"
        android:layout_weight=".9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/info"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_info_black_24dp" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/share"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_share_black_24dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_settings_black_24dp" />
    </TableRow>

</LinearLayout>